--- a/src/components/HomePage/Aboutus.css
+++ b/src/components/HomePage/Aboutus.css
@@ -3,25 +3,37 @@
     margin-bottom: 8rem;
     width: 100%;
     min-height:50vh; /*el min height es para que el contenido se adapte */
-    background-color: blue;
-    -webkit-transform: skewY(-7deg);
-    transform: skewY(-8deg);
+
     padding-top: 3rem;
     padding-bottom: 3rem;
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(147,230,241,1) 0%, rgba(145,192,241,1) 45.5% );
-    
+    /*background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(147,230,241,1) 0%, rgba(145,192,241,1) 45.5% ),url("https://res.cloudinary.com/dof2dcqoe/image/upload/v1621788849/mountain--aboutus_w71e02.jpg");*/
+    background-image: linear-gradient(to right bottom, #039be536, rgb(143 186 224 / 50%)), url(https://res.cloudinary.com/dof2dcqoe/image/upload/v1621788849/mountain--aboutus_w71e02.jpg);    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
 .section--aboutus__text{
-    -webkit-transform: skewY(7deg);
-    transform: skewY(7deg);
+  
     min-width: 300px;
     max-width: 900px;
     margin:0 auto;
     text-align: center;
     padding: 0 20px;
+    background-color: rgb(255 255 255 / 32%);
+    font-size: 1.5rem;
+    padding: 2.5rem;
+    text-align: center;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 1.5rem 4rem rgb(0 0 0 / 15%);
+    box-shadow: 0 1.5rem 4rem rgb(0 0 0 / 15%);
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
 }
+
 .section--aboutus__text h2{
     font-family: 'DM Sans', sans-serif;
     font-weight: bold;
